RESOLVED FIXED55419
IDBKeyRange.bound() should not use the optional options object
https://bugs.webkit.org/show_bug.cgi?id=55419
Summary IDBKeyRange.bound() should not use the optional options object
Jeremy Orlow
Reported 2011-02-28 15:32:38 PST
IDBKeyRange.bound() should not use the optional options object
Attachments
Patch (10.71 KB, patch)
2011-02-28 15:33 PST, Jeremy Orlow
no flags
Patch (10.70 KB, patch)
2011-03-01 12:49 PST, Jeremy Orlow
jamesr: review+
Jeremy Orlow
Comment 1 2011-02-28 15:33:18 PST
Jeremy Orlow
Comment 2 2011-03-01 12:35:43 PST
This moves us back in line with the spec.
Jeremy Orlow
Comment 3 2011-03-01 12:49:53 PST
David Grogan
Comment 4 2011-03-01 12:56:40 PST
Unofficial LGTM. This is indeed what the spec says and I checked for absent-minded-type mistakes we all make. Just look over for style.
James Robinson
Comment 5 2011-03-01 13:00:18 PST
Comment on attachment 84278 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=84278&action=review OK > Source/WebCore/ChangeLog:8 > + https://bugs.webkit.org/show_bug.cgi?id=55419 > + > + * storage/IDBKeyRange.cpp: Can you add a reference to the relevant tests? Link to spec text would be nice as well.
Jeremy Orlow
Comment 6 2011-03-01 13:02:41 PST
(In reply to comment #5) > (From update of attachment 84278 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=84278&action=review > > OK > > > Source/WebCore/ChangeLog:8 > > + https://bugs.webkit.org/show_bug.cgi?id=55419 > > + > > + * storage/IDBKeyRange.cpp: > > Can you add a reference to the relevant tests? Link to spec text would be nice as well. Will add http://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html#range-concept and a note about the existing tests that were updated. Thanks.
Jeremy Orlow
Comment 7 2011-03-01 18:02:46 PST
Note You need to log in before you can comment on or make changes to this bug.