2011-03-01  Jeremy Orlow  <jorlow@chromium.org>

Reviewed by James Robinson.

        IDBKeyRange.bound() should not use the optional options object
        https://bugs.webkit.org/show_bug.cgi?id=55419

        * storage/indexeddb/index-cursor.html:
        * storage/indexeddb/keyrange-expected.txt:
        * storage/indexeddb/keyrange.html:
        * storage/indexeddb/objectstore-cursor.html:
2011-03-01  Jeremy Orlow  <jorlow@chromium.org>

        Reviewed by James Robinson.

        IDBKeyRange.bound() should not use the optional options object
        https://bugs.webkit.org/show_bug.cgi?id=55419

        http://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html#range-concept

        Added some code to existing tests to cover these cases.

        * storage/IDBKeyRange.cpp:
        (WebCore::IDBKeyRange::bound):
        * storage/IDBKeyRange.h:
        * storage/IDBKeyRange.idl:

Canonical link: https://commits.webkit.org/69973@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80076 268f45cc-cd09-0410-ab3c-d52691b4dbfc