Source/WebCore/storage/IDBKeyRange.cpp
@@ -56,12 +56,8 @@ PassRefPtr<IDBKeyRange> IDBKeyRange::upperBound(PassRefPtr<IDBKey> bound, bool o
     return IDBKeyRange::create(0, bound, false, open);
 }
 
-PassRefPtr<IDBKeyRange> IDBKeyRange::bound(PassRefPtr<IDBKey> lower, PassRefPtr<IDBKey> upper, const OptionsObject& options)
+PassRefPtr<IDBKeyRange> IDBKeyRange::bound(PassRefPtr<IDBKey> lower, PassRefPtr<IDBKey> upper, bool lowerOpen, bool upperOpen)
 {
-    bool lowerOpen = false;
-    bool upperOpen = false;
-    options.getKeyBool("lowerOpen", lowerOpen);
-    options.getKeyBool("upperOpen", upperOpen);
     return IDBKeyRange::create(lower, upper, lowerOpen, upperOpen);
 }
 
